--- a/_config.yml
+++ b/_config.yml
@@ -148,16 +148,16 @@ collections:
       layout: post
     output: true
     permalink: /:collection/:title/
+  experience:
+    defaults:
+      layout: post
+    output: true
+    permalink: /:collection/:title/
   projects:
     output: true
     permalink: /:collection/:title/
 
 announcements:
-  enabled: true
-  scrollable: true # adds a vertical scroll bar if there are more than 3 news items
-  limit: # leave blank to include all the news in the `_news` folder
-
-experience:
   enabled: true
   scrollable: true # adds a vertical scroll bar if there are more than 3 news items
   limit: # leave blank to include all the news in the `_news` folder
