--- a/_config.yml
+++ b/_config.yml
@@ -148,11 +148,6 @@ collections:
       layout: post
     output: true
     permalink: /:collection/:title/
-  experience:
-    defaults:
-      layout: post
-    output: true
-    permalink: /:collection/:title/
   projects:
     output: true
     permalink: /:collection/:title/
@@ -166,6 +161,11 @@ latest_posts:
   enabled: true
   scrollable: true # adds a vertical scroll bar if there are more than 3 new posts items
   limit: 3 # leave blank to include all the blog posts
+
+experience:
+  enabled: true
+  scrollable: false
+  limit: 
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
